Added Admin end points to upload movies and user can see