@@ -1,3 +1,252 @@
+//package com.example.adminbackend.config;
+//
+//import com.example.adminbackend.security.JwtAuthenticationEntryPoint;
+//import com.example.adminbackend.security.JwtAuthenticationFilter;
+//import org.springframework.beans.factory.annotation.Autowired;
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
+//import org.springframework.http.HttpMethod;
+//import org.springframework.security.authentication.AuthenticationManager;
+//import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+//import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+//import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+//import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+//import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+//import org.springframework.security.config.http.SessionCreationPolicy;
+//import org.springframework.security.core.userdetails.UserDetailsService;
+//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+//import org.springframework.security.crypto.password.PasswordEncoder;
+//import org.springframework.security.web.SecurityFilterChain;
+//import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.CorsConfigurationSource;
+//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+//
+//import java.util.Arrays;
+//
+//@Configuration
+//@EnableWebSecurity
+//@EnableMethodSecurity(prePostEnabled = true)
+//public class SecurityConfig {
+//
+//    @Autowired
+//    private UserDetailsService userDetailsService;
+//
+//    @Autowired
+//    private JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+//
+//    @Autowired
+//    private JwtAuthenticationFilter jwtAuthenticationFilter;
+//
+//    @Bean
+//    public PasswordEncoder passwordEncoder() {
+//        return new BCryptPasswordEncoder();
+//    }
+//
+//    @Bean
+//    public DaoAuthenticationProvider authenticationProvider() {
+//        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+//        authProvider.setUserDetailsService(userDetailsService);
+//        authProvider.setPasswordEncoder(passwordEncoder());
+//        return authProvider;
+//    }
+//
+//    @Bean
+//    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+//        return config.getAuthenticationManager();
+//    }
+//
+//
+//    @Bean
+//    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+//        http
+//                .csrf(AbstractHttpConfigurer::disable)
+//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+//                .authorizeHttpRequests(auth -> auth
+//
+//                        // static uploads
+//                        .requestMatchers("/uploads/**").permitAll()
+//
+//                        // allow anonymous GETs for listing/fetching movies
+//                        .requestMatchers(HttpMethod.GET, "/api/movies/**").permitAll()
+//
+//                        // your auth endpoints
+//                        .requestMatchers("/api/auth/login", "/api/user/login", "/api/user/register").permitAll()
+//                        .requestMatchers("/api/auth/health", "/api/test/**", "/api/setup/**").permitAll()
+//
+//                        // user-scoped endpoints
+//                        .requestMatchers("/api/user/me", "/api/user/**").authenticated()
+//
+//                        // admin-only movie mutations
+//                        .requestMatchers(HttpMethod.POST,   "/api/movies/**").hasAnyRole("ADMIN","SUPER_ADMIN")
+//                        .requestMatchers(HttpMethod.PUT,    "/api/movies/**").hasAnyRole("ADMIN","SUPER_ADMIN")
+//                        .requestMatchers(HttpMethod.PATCH,  "/api/movies/**").hasAnyRole("ADMIN","SUPER_ADMIN")
+//                        .requestMatchers(HttpMethod.DELETE, "/api/movies/**").hasAnyRole("ADMIN","SUPER_ADMIN")
+//
+//                        // everything else
+//                        .anyRequest().authenticated()
+//                )
+//                .exceptionHandling(ex -> ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
+//                .authenticationProvider(authenticationProvider())
+//                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+//
+//        return http.build();
+//    }
+//
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+//        configuration.setAllowedHeaders(Arrays.asList("*"));
+//        configuration.setAllowCredentials(true);
+//        configuration.setMaxAge(3600L);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
+//
+//}
+
+//package com.example.adminbackend.config;
+//
+//import com.example.adminbackend.security.JwtAuthenticationEntryPoint;
+//import com.example.adminbackend.security.JwtAuthenticationFilter;
+//import org.springframework.beans.factory.annotation.Autowired;
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
+//import org.springframework.http.HttpMethod;
+//import org.springframework.security.authentication.AuthenticationManager;
+//import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+//import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+//import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+//import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+//import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+//import org.springframework.security.config.http.SessionCreationPolicy;
+//import org.springframework.security.core.userdetails.UserDetailsService;
+//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+//import org.springframework.security.crypto.password.PasswordEncoder;
+//import org.springframework.security.web.SecurityFilterChain;
+//import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.CorsConfigurationSource;
+//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+//
+//import java.util.Arrays;
+//
+//@Configuration
+//@EnableWebSecurity
+//@EnableMethodSecurity(prePostEnabled = true)
+//public class SecurityConfig {
+//
+//    @Autowired
+//    private UserDetailsService userDetailsService;
+//
+//    @Autowired
+//    private JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+//
+//    @Autowired
+//    private JwtAuthenticationFilter jwtAuthenticationFilter;
+//
+//    @Bean
+//    public PasswordEncoder passwordEncoder() {
+//        return new BCryptPasswordEncoder();
+//    }
+//
+//    @Bean
+//    public DaoAuthenticationProvider authenticationProvider() {
+//        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+//        authProvider.setUserDetailsService(userDetailsService);
+//        authProvider.setPasswordEncoder(passwordEncoder());
+//        return authProvider;
+//    }
+//
+//    @Bean
+//    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+//        return config.getAuthenticationManager();
+//    }
+//
+//    @Bean
+//    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+//        http
+//                // Disable CSRF
+//                .csrf(AbstractHttpConfigurer::disable)
+//
+//                // Enable CORS
+//                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+//
+//                // Stateless session management
+//                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+//
+//                // Authorization rules
+//                .authorizeHttpRequests(auth -> auth
+//                        // 1) Public movie endpoints
+//                        .requestMatchers(HttpMethod.GET,
+//                                "/movies", "/movies/**",
+//                                "/api/movies", "/api/movies/**")
+//                        .permitAll()
+//
+//                        // 2) Public static uploads
+//                        .requestMatchers("/uploads/**").permitAll()
+//
+//                        // 3) Public auth & setup & test endpoints
+//                        .requestMatchers(
+//                                "/api/auth/login", "/auth/login",
+//                                "/api/user/register", "/api/user/login",
+//                                "/api/auth/health", "/auth/health",
+//                                "/api/test/**", "/test/**",
+//                                "/api/setup/**", "/setup/**"
+//                        ).permitAll()
+//
+//                        // 4) Authenticated user profile endpoints
+//                        .requestMatchers(
+//                                "/api/user/me", "/api/user/profile",
+//                                "/api/user/change-password",
+//                                "/api/user/upload-profile-picture",
+//                                "/api/user/account"
+//                        ).authenticated()
+//
+//                        // 5) Admin‐only user management
+//                        .requestMatchers(
+//                                "/api/user/all", "/api/user/stats",
+//                                "/api/user/{id}"
+//                        ).hasAnyRole("ADMIN", "SUPER_ADMIN")
+//
+//                        // 6) All other requests require authentication
+//                        .anyRequest().authenticated()
+//                )
+//
+//                // Exception handling
+//                .exceptionHandling(ex -> ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
+//
+//                // Authentication provider
+//                .authenticationProvider(authenticationProvider())
+//
+//                // JWT filter
+//                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+//        ;
+//
+//        return http.build();
+//    }
+//
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+//        configuration.setAllowedHeaders(Arrays.asList("*"));
+//        configuration.setAllowCredentials(true);
+//        configuration.setMaxAge(3600L);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
+//}
 package com.example.adminbackend.config;
 
 import com.example.adminbackend.security.JwtAuthenticationEntryPoint;
@@ -5,6 +254,7 @@ import com.example.adminbackend.security.JwtAuthenticationFilter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -23,6 +273,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -45,80 +296,79 @@ public class SecurityConfig {
 
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setUserDetailsService(userDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration config
+    ) throws Exception {
         return config.getAuthenticationManager();
     }
-
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // Disable CSRF
+                // disable CSRF
                 .csrf(AbstractHttpConfigurer::disable)
-
-                // Enable CORS
+                // enable CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                // stateless session
+                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                // Set session management to stateless
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-                // Configure authorization
                 .authorizeHttpRequests(auth -> auth
-                        // Allow static file access for profile pictures FIRST
+
+                        // 1) static uploads
                         .requestMatchers("/uploads/**").permitAll()
 
-                        // Explicitly allow login endpoints - MOST IMPORTANT
-                        .requestMatchers("/api/auth/login").permitAll()
-                        .requestMatchers("/auth/login").permitAll()
+                        // 2) public movie endpoints
+                        .requestMatchers(HttpMethod.GET,
+                                "/movies", "/movies/**",
+                                "/api/movies", "/api/movies/**"
+                        ).permitAll()
 
-                        // Allow user registration and login - FIX: More specific patterns first
-                        .requestMatchers("/api/user/register", "/api/user/login").permitAll()
-                        .requestMatchers("/user/register", "/user/login").permitAll()
+                        // 3) public user login & registration
+                        .requestMatchers(HttpMethod.POST,
+                                "/user/login",
+                                "/user/register"
+                        ).permitAll()
 
-                        // Allow health check
-                        .requestMatchers("/api/auth/health").permitAll()
-                        .requestMatchers("/auth/health").permitAll()
+                        // 4) health, test, setup endpoints
+                        .requestMatchers(
+                                "/auth/health",
+                                "/test/**",
+                                "/setup/**"
+                        ).permitAll()
 
-                        // Allow test endpoints (remove in production)
-                        .requestMatchers("/api/test/**").permitAll()
-                        .requestMatchers("/test/**").permitAll()
+                        // 5a) authenticated GET /api/user/me
+                        .requestMatchers(HttpMethod.GET, "/user/me")
+                        .authenticated()
 
-                        // Allow setup endpoints (remove in production)
-                        .requestMatchers("/api/setup/**").permitAll()
-                        .requestMatchers("/setup/**").permitAll()
+                        // 5b) authenticated PUT profile routes
+                        .requestMatchers(HttpMethod.PUT,
+                                "/user/profile",
+                                "/user/change-password",
+                                "/user/upload-profile-picture"
+                        ).authenticated()
 
-                        // User profile endpoints - require authentication
-                        .requestMatchers("/api/user/me", "/api/user/profile", "/api/user/change-password",
-                                "/api/user/upload-profile-picture", "/api/user/account").authenticated()
-                        .requestMatchers("/user/me", "/user/profile", "/user/change-password",
-                                "/user/upload-profile-picture", "/user/account").authenticated()
+                        // 6) admin-only user management
+                        .requestMatchers(HttpMethod.GET,
+                                "/user/all",
+                                "/user/stats"
+                        ).hasAnyRole("ADMIN", "SUPER_ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/user/{id}")
+                        .hasAnyRole("ADMIN", "SUPER_ADMIN")
 
-                        // Admin-only user management endpoints
-                        .requestMatchers("/api/user/all", "/api/user/stats", "/api/user/{id}").hasAnyRole("ADMIN", "SUPER_ADMIN")
-                        .requestMatchers("/user/all", "/user/stats", "/user/{id}").hasAnyRole("ADMIN", "SUPER_ADMIN")
-
-                        // All other auth endpoints need authentication
-                        .requestMatchers("/api/auth/**").authenticated()
-                        .requestMatchers("/auth/**").authenticated()
-
-                        // All other requests need authentication
+                        // 7) everything else requires authentication
                         .anyRequest().authenticated()
                 )
 
-                // Exception handling
-                .exceptionHandling(ex -> ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
-
-                // Add authentication provider
+                // exception handling & JWT filter
+                .exceptionHandling(e -> e.authenticationEntryPoint(jwtAuthenticationEntryPoint))
                 .authenticationProvider(authenticationProvider())
-
-                // Add JWT filter
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -126,16 +376,17 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        CorsConfiguration cfg = new CorsConfiguration();
+        cfg.setAllowedOriginPatterns(List.of("*"));
+        cfg.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+        cfg.setAllowedHeaders(List.of("*"));
+        cfg.setAllowCredentials(true);
+        cfg.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", cfg);
         return source;
     }
-
 }
